--- a/app/assets/stylesheets/theme/bars-movie.css.scss
+++ b/app/assets/stylesheets/theme/bars-movie.css.scss
@@ -9,23 +9,33 @@
   float: left;
   background-color: #fff3d6;
   margin: 0.5px;
+  z-index: 900;
+  position: relative;
 }
 .br-theme-bars-movie .br-widget a.br-active,
 .br-theme-bars-movie .br-widget a.br-selected {
-  background-color: #4278F5;
+  background-color: #ffc333;
 }
 .br-theme-bars-movie .br-widget .br-current-rating {
-  clear: both;
-  width: 240px;
+  // clear: both;
+  // width: 240px;
   text-align: center;
   font-weight: 600;
   display: block;
   padding: .5em 0;
-  color: #4278F5;
-  font-weight: 400;
+  color: #484848;
+  font-weight: 300;
+  font-size: 12px;
+  top: -3px;
+  left: 27px;
+  position: relative;
+  z-index: 1b;
 }
 .br-theme-bars-movie .br-readonly a {
   cursor: default;
+}
+.br-theme-bars-movie .br-readonly a.br-inactive {
+  background-color: #fff3d6;
 }
 .br-theme-bars-movie .br-readonly a.br-active,
 .br-theme-bars-movie .br-readonly a.br-selected {
